--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,58 @@
 input:focus {
     background: pink;
 }
+
+.container {
+    width: 94%;
+    margin: 3%;
+}
+
+#kirjautuminen {
+	width: 100%;
+    height: 100px;
+    height: auto;
+}
+
+#chatti {
+   	width: 100%;
+    overflow-Y:auto;
+}
+
+#keskustelualue {
+   	width: 100%;
+    height: 100px;
+    overflow-Y:auto;
+}
+
+#kirjautuneet {
+    float:left;
+    width: 20%;
+    margin: 0;
+    overflow-Y:auto;
+}
+
+#pelilauta {
+    margin-left: 20%;
+    border-left: 1px solid gray;
+    margin-right: 20%;
+    border-right: 1px solid gray;
+    text-align: center;
+}
+
+#rankinglista {
+    float: right;
+    width: 20%;
+    margin: 0;
+    overflow-Y:auto;
+}
+
+
+#palvelintiedot {
+   	width: 100%;
+    height:100px;
+    overflow-Y:auto;
+}
+
+table {
+    margin: auto;
+}
