--- a/client/style.css
+++ b/client/style.css
@@ -56,6 +56,20 @@ a {
     overflow-Y:auto;
 }
 
+#haastelaatikko {
+    visibility: hidden;
+}
+#haaste {
+    position: absolute;
+    overflow: hidden;
+	top:  150px;
+    left: 0px;
+    width: 200px;
+    height: 100px;
+	background-color: azure;
+	text-align: center;
+}
+
 table {
     margin: auto;
 }
