--- a/client/style.css
+++ b/client/style.css
@@ -49,9 +49,8 @@ a {
     overflow-Y:auto;
 }
 
-
 #palvelintiedot {
-   	width: 100%;
+    width: 100%;
     height:150px;
     overflow-Y:auto;
 }
@@ -62,14 +61,20 @@ a {
 #haaste {
     position: absolute;
     overflow: hidden;
-	top:  150px;
+    top:  150px;
     left: 0px;
     width: 200px;
     height: 100px;
-	background-color: azure;
-	text-align: center;
+    background-color: azure;
+    text-align: center;
 }
 
-table {
+table, th, td {
     margin: auto;
+}
+
+#rankings {
+    width: 100%;
+    margin: auto;
+    text-align: left;
 }
